# virtual-gpu-lut-box

./: .cspell.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  TASKS.md  mkdocs.yml  pyproject.toml  tasks.py  test_syphon_metal.py
.github/workflows/: ci.yml  publish.yml
client_integrations/: TD_SETUP_GUIDE.md  build_shaders.py  pixera_hald_lut.glsl  td_hald_lut.glsl
client_integrations/src/: hald_lut_core.glsl  pixera_hald_lut.template.glsl  td_hald_lut.template.glsl
docs/: api.md  development.md  index.md  tasks.md
docs/examples/: basic_usage.py  comprehensive_demo.py  desaturate_50_lut_33.py  identity_lut_33.py  livegrading_integration.py
docs/guides/: pixera-setup.md
src/: vglb.py
src/virtual_gpu_lut_box/: __init__.py  cli.py  server.py
src/virtual_gpu_lut_box/gpu_texture_stream/: __init__.py  base.py  factory.py  spout.py  syphon.py
src/virtual_gpu_lut_box/lut/: __init__.py  generator.py  hald_converter.py
src/virtual_gpu_lut_box/network/: __init__.py  lut_streamer.py  protocol.py  server.py
src/virtual_gpu_lut_box/streaming/: __init__.py  base.py  factory.py  spout.py  syphon.py
tests/: __init__.py  test_cli.py  test_hald_converter.py  test_lut_generator.py  test_network_protocol.py  test_network_server.py  test_platform_detection.py  test_server.py  test_streaming.py
tests/integration/: desaturate_50_lut_33.py  identity_lut_33.py
touchdesigner/: README.md  TD_SETUP_GUIDE.md  td_hald_lut.glsl
typings/Metal/: __init__.pyi
